<resources>
    <string name="app_name">USTH Weather</string>
    <string name="mon">Mon</string>
    <string name="rain_heavily">Rain Heavily</string>
    <string name="_22c" translatable="false">22C</string>
    <string name="tue">Tue</string>
    <string name="sunny">Sunny</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="mostly_cloudy">Mostly Cloudy</string>
    <string name="partly_cloudy">Partly Cloudy</string>
    <string name="refresh">Refresh</string>
    <string name="setting">Setting</string>
</resources>