<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForecastFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/parent_height"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/day_width"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="25dp"
                android:text="@string/mon" />

            <ImageView
                android:layout_width="@dimen/ico_width"
                android:layout_height="match_parent"
                android:src="@drawable/rainy" />

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:orientation="vertical">

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:autoSizeTextType="uniform"
                    android:paddingLeft="20dp"
                    android:paddingTop="10dp"
                    android:text="@string/rain_heavily" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="31dp"
                    android:paddingLeft="20dp"
                    android:text="@string/_22c" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="25dp"
                android:text="@string/tue" />

            <ImageView
                android:layout_width="@dimen/ico_width"
                android:layout_height="match_parent"
                android:src="@drawable/sun" />

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:orientation="vertical">

                <TextView
                    android:layout_width="@dimen/status_width"
                    android:layout_height="wrap_content"
                    android:autoSizeTextType="uniform"
                    android:paddingLeft="20dp"
                    android:paddingTop="10dp"
                    android:text="@string/sunny" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="31dp"
                    android:paddingLeft="20dp"
                    android:text="24-25C" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="25dp"
                android:text="@string/wed" />

            <ImageView
                android:layout_width="@dimen/ico_width"
                android:layout_height="match_parent"
                android:src="@drawable/cloudy" />

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:orientation="vertical">

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:autoSizeTextType="uniform"
                    android:paddingLeft="20dp"
                    android:paddingTop="10dp"
                    android:text="@string/mostly_cloudy" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="31dp"
                    android:paddingLeft="20dp"
                    android:text="22C-24C" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="25dp"
                android:text="@string/thu" />

            <ImageView
                android:layout_width="150px"
                android:layout_height="match_parent"
                android:src="@drawable/cloudy" />

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:orientation="vertical">

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:autoSizeTextType="uniform"
                    android:paddingLeft="20dp"
                    android:paddingTop="10dp"
                    android:text="@string/partly_cloudy" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="31dp"
                    android:paddingLeft="20dp"
                    android:text="19C-22C" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="25dp"
                android:text="@string/fri" />

            <ImageView
                android:layout_width="150px"
                android:layout_height="match_parent"
                android:src="@drawable/rainy" />

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:orientation="vertical">

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:autoSizeTextType="uniform"
                    android:paddingLeft="20dp"
                    android:paddingTop="10dp"
                    android:text="@string/rain_heavily" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="31dp"
                    android:paddingLeft="20dp"
                    android:text="16C-18C" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="25dp"
                android:text="@string/sat" />

            <ImageView
                android:layout_width="150px"
                android:layout_height="match_parent"
                android:src="@drawable/rainy" />

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:orientation="vertical">

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:autoSizeTextType="uniform"
                    android:paddingLeft="20dp"
                    android:paddingTop="10dp"
                    android:text="@string/rain_heavily" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="31dp"
                    android:paddingLeft="20dp"
                    android:text="18C-21C" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="25dp"
                android:text="@string/sun" />

            <ImageView
                android:layout_width="150px"
                android:layout_height="match_parent"
                android:src="@drawable/sun" />

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:orientation="vertical">

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:autoSizeTextType="uniform"
                    android:paddingLeft="20dp"
                    android:paddingTop="10dp"
                    android:text="@string/sunny" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="31dp"
                    android:paddingLeft="20dp"
                    android:text="22C-23C" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>